seccion de proyecto finalizado

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[75vw] max-lg:my-[90px] mx-auto">
+		<main class="max-w-[75vw] max-lg:my-[90px] mx-auto flex flex-col gap-10">
 			<slot />
 		</main>
 	</body>
