--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import SectionExperiencia from '../components/SectionExperiencia.astro';
+import SectionProyectos from '../components/SectionProyectos.astro';
 import SectionResume from '../components/SectionResume.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="AlexxScript">
 	<SectionResume/>	
 	<SectionExperiencia/>
+	<SectionProyectos/>
 </Layout>
