sobre mi section finished

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import SectionExperiencia from '../components/SectionExperiencia.astro';
 import SectionProyectos from '../components/SectionProyectos.astro';
 import SectionResume from '../components/SectionResume.astro';
+import SectionSobreMi from '../components/SectionSobreMi.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -9,4 +10,5 @@ import Layout from '../layouts/Layout.astro';
 	<SectionResume/>	
 	<SectionExperiencia/>
 	<SectionProyectos/>
+	<SectionSobreMi/>
 </Layout>
