--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import NavBar from "../components/Header.astro";
 
 interface Props {
@@ -23,6 +24,7 @@ const { title } = Astro.props;
 		<main class="max-w-[75vw] max-lg:my-[90px] mx-auto flex flex-col gap-10">
 			<slot />
 		</main>
+		<Footer/>
 	</body>
 </html>
 <style is:global>
