--- a/src/components/ImgPerro.astro
+++ b/src/components/ImgPerro.astro
@@ -4,7 +4,7 @@ import imagePerro from "../assets/Group 6.png"
 ---
 
 <div class="imgContainer flex justify-center items-center w-[250px]">
-    <div class="bgImg bg-white h-[250px] w-[250px] absolute max-sm:w-[120px] max-sm:[120px]"></div>
+    <div class="bgImg bg-white h-[250px] w-[250px] absolute max-sm:w-[120px] max-sm:h-[120px]"></div>
     <Image class="z-10 max-sm:w-[120px] max-sm:[120px]" src={imagePerro} alt="adsad" />
 </div>
 
