--- a/src/components/ContainerCardTech.astro
+++ b/src/components/ContainerCardTech.astro
@@ -1,5 +1,5 @@
 
-<div class="flex flex-wrap w-[270px] md:w-[450px] justify-center items-center gap-2 p-4 border-[#7C7C7C] border-2 rounded-xl
+<div class="flex flex-wrap w-[270px] min-[1100px]:w-[400px] justify-center items-center gap-4 p-4 border-[#7C7C7C] border-2 rounded-xl
             hover:p-5 hover:border-[#FC6068] transition-all duration-100">
     <slot/>
 </div>
