--- a/src/components/ImgPerro.astro
+++ b/src/components/ImgPerro.astro
@@ -3,9 +3,9 @@ import { Image } from "astro:assets";
 import imagePerro from "../assets/Group 6.png"
 ---
 
-<div class="imgContainer flex justify-center items-center w-[250px]">
-    <div class="bgImg bg-white h-[250px] w-[250px] absolute max-sm:w-[120px] max-sm:h-[120px]"></div>
-    <Image class="z-10 max-sm:w-[120px] max-sm:[120px]" src={imagePerro} alt="adsad" />
+<div class="imgContainer flex justify-center items-center w-[300px]">
+    <div class="bgImg bg-white h-[200px] w-[200px] absolute max-sm:w-[120px] max-sm:h-[120px]"></div>
+    <Image class="z-10 max-sm:w-[120px] w-[80%]" src={imagePerro} alt="adsad" />
 </div>
 
 
