--- a/src/components/SectionExperiencia.astro
+++ b/src/components/SectionExperiencia.astro
@@ -14,9 +14,9 @@ import RedireccionProyecto from "./RedireccionProyecto.astro";
         <ListadoExperiencia>
             <div class="lg:self-center lg:w-[30%]">
                 <h3 class="text-xl text-[#fc6067]"><strong>Desarrollo del sitio web "PADEK"</strong></h3>
-                <h4 class="text-lg font-semibold">Abril 2022–Octubre 2022 </h4>
+                <h4 class="text-lg font-semibold text-gray-400">Abril 2022–Octubre 2022 </h4>
             </div>
-            <div class="lg:w-[70%]">
+            <div class="lg:w-[70%] text-gray-400">
                 <p>
                     Colaboración para el desarrollo del sitio web PADEK. Mis responsabilidades incluyeron:
                     creación del proyecto con ReactJS, enrutamiento con React router, animaciones,
@@ -60,9 +60,9 @@ import RedireccionProyecto from "./RedireccionProyecto.astro";
         <ListadoExperiencia>
             <div class="lg:self-center lg:w-[30%]">
                 <h3 class="text-xl text-[#fc6067]"><strong>Desarrollo aplicación web cafeteria en tiempo real</strong></h3>
-                <h4 class="text-lg font-semibold">Enero 2024–Julio 2024 </h4>
+                <h4 class="text-lg font-semibold text-gray-400">Enero 2024–Julio 2024 </h4>
             </div>
-            <div class="lg:w-[70%]">
+            <div class="lg:w-[70%] text-gray-400">
                 <p>
                     Me encargué de la construcción de una aplicación web en tiempo real para una cafeteria. Mis tareas
                     incluyeron el diseño de la base de datos en PostgreSQL, desarrollo del backend con ExpressJS y SocketIO,
@@ -107,6 +107,11 @@ import RedireccionProyecto from "./RedireccionProyecto.astro";
 </section>
 
 <style>
+
+    h2 svg {
+        height: 30px;
+    }
+
     svg{
         height: 20px;
     }
