--- a/src/components/SectionProyectos.astro
+++ b/src/components/SectionProyectos.astro
@@ -9,11 +9,11 @@ import TecnologiasProyecto from "./TecnologiasProyecto.astro";
 
 <section id="proyectos">
     <h2 class="my-3 font-semibold text-3xl flex items-center gap-2">
-        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-code"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 8l-4 4l4 4" /><path d="M17 8l4 4l-4 4" /><path d="M14 4l-4 16" /></svg>
+        <svg  xmlns="http://www.w3.org/2000/svg"  width="30"  height="30"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-code"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 8l-4 4l4 4" /><path d="M17 8l4 4l-4 4" /><path d="M14 4l-4 16" /></svg>
         Proyectos y tecnologías.
     </h2>
     <div>
-        <p>Aquí podrás consultar algunos proyectos personales que he realizado y realizaré para practicar así mismo explorar las tecnologías emergentes ademas se 
+        <p class="text-gray-400">Aquí podrás consultar algunos proyectos personales que he realizado y realizaré para practicar así mismo explorar las tecnologías emergentes ademas se 
             demuestra la intención de seguir aprendiendo y explorar nuevas tecnologías y herramientas.</p>
         <ul class="my-5">
             <li class="p-5">
@@ -36,13 +36,13 @@ import TecnologiasProyecto from "./TecnologiasProyecto.astro";
         </ul>
     </div>
     <div class="py-4">
-        <h3 class="text-3xl font-semibold flex items-center gap-3">
+        <h3 class="text-3xl font-semibold flex items-center gap-3 ">
             <svg  xmlns="http://www.w3.org/2000/svg"  width="30"  height="30"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-code-dots"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 12h.01" /><path d="M12 12h.01" /><path d="M9 12h.01" /><path d="M6 19a2 2 0 0 1 -2 -2v-4l-1 -1l1 -1v-4a2 2 0 0 1 2 -2" /><path d="M18 19a2 2 0 0 0 2 -2v-4l1 -1l-1 -1v-4a2 2 0 0 0 -2 -2" /></svg>
             Tecnologías
         </h3>
-        <p>Listado de las tecnologías con las que he trabajado, he realizado proyectos y he practicado.</p>
+        <p class="text-gray-400">Listado de las tecnologías con las que he trabajado, he realizado proyectos y he practicado.</p>
         <div class="flex flex-col ">
-            <div class="flex justify-center items-center gap-5 flex-wrap">
+            <div class="flex justify-center items-center gap-5 flex-wrap md:items-baseline">
                 <Frontend />
                 <Backend/>
             </div>
