--- a/src/components/ContentResume.astro
+++ b/src/components/ContentResume.astro
@@ -3,7 +3,7 @@
         <span class="text-2xl max-md:text-xl font-medium text-[#FC6168]">Hey, soy</span>
         Alejandro Ameneyro
     </h1>
-    <p class="mb-3 text-xl text-gray-400 max-w-[850px] max-md:text-lg">
+    <p class="mb-3 text-lg text-gray-400 max-w-[850px] max-md:text-lg">
         Egresado de la carrera Técnico en Informática y actualmente estudiante de la
         Licenciatura en Ciencias de la Informática en CDMX, México.<br/>
         Especializado en desarrollo web, con el objetivo de <strong class="text-[#FC6168]">demostrar mi identidad y habilidades a través de la tecnología</strong>.
