--- a/src/components/SectionExperiencia.astro
+++ b/src/components/SectionExperiencia.astro
@@ -13,8 +13,8 @@ import RedireccionProyecto from "./RedireccionProyecto.astro";
     <ul class="flex flex-col gap-6">
         <ListadoExperiencia>
             <div class="lg:self-center lg:w-[30%]">
-                <h3 class="text-xl text-[#fc6067]"><strong>Desarrollo del sitio web "PADEK"</strong></h3>
-                <h4 class="text-lg font-semibold text-gray-400">Abril 2022–Octubre 2022 </h4>
+                <h3 class="text-lg text-[#fc6067]"><strong>Desarrollo del sitio web "PADEK"</strong></h3>
+                <h4 class="text-base font-semibold text-gray-400">Abril 2022–Octubre 2022 </h4>
             </div>
             <div class="lg:w-[70%] text-gray-400">
                 <p>
@@ -59,8 +59,8 @@ import RedireccionProyecto from "./RedireccionProyecto.astro";
         </ListadoExperiencia>
         <ListadoExperiencia>
             <div class="lg:self-center lg:w-[30%]">
-                <h3 class="text-xl text-[#fc6067]"><strong>Desarrollo aplicación web cafeteria en tiempo real</strong></h3>
-                <h4 class="text-lg font-semibold text-gray-400">Enero 2024–Julio 2024 </h4>
+                <h3 class="text-lg text-[#fc6067]"><strong>Desarrollo aplicación web cafeteria en tiempo real</strong></h3>
+                <h4 class="text-base font-semibold text-gray-400">Enero 2024–Julio 2024 </h4>
             </div>
             <div class="lg:w-[70%] text-gray-400">
                 <p>
