--- a/src/components/SectionResume.astro
+++ b/src/components/SectionResume.astro
@@ -5,10 +5,9 @@ import ImgPerro from "./ImgPerro.astro"
 ---
 
 <section id="intro" class="my-10 flex flex-col-reverse justify-center items-center
-                          lg:h-[600px] min-[1050px]:my-0 min-[1050px]:h-screen xl:h-screen xl:flex-row xl:justify-evenly">
+                          lg:h-[600px] min-[1050px]:my-0 min-[1050px]:h-[70vh] xl:justify-evenly">
     <div class="">
        <ContentResume/> 
        <ContainerLinks/>
     </div>
-    <ImgPerro/>
 </section>
