--- a/src/components/ContainerCardTech.astro
+++ b/src/components/ContainerCardTech.astro
@@ -1,5 +1,5 @@
 
-<div class="flex flex-wrap w-[270px] min-[1100px]:w-[400px] justify-center items-center gap-4 p-4 border-[#7C7C7C] border-2 rounded-xl
-            hover:p-5 hover:border-[#FC6068] transition-all duration-100">
+<div class="flex flex-wrap w-[220px] min-[1140px]:w-[330px] justify-center items-center gap-4 p-4 border-[#fc606855] border-2 rounded-xl
+            hover:p-5 hover:border-[#FC6068] transition-all duration-100 ">
     <slot/>
 </div>
