--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,43 @@
 ---
+import FooterSocial from "./FooterSocial.astro"
+
 const currentYear = new Date().getFullYear()
 ---
 
-<footer class="bg-black p-5 mt-10">
-    <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
-        <div class="mb-4 md:mb-0">
-            <p>&copy; { currentYear } Alejandro Ameneyro.</p>
-        </div>
-        <div class="mb-4 md:mb-0">
-            <a href="mailto:tu-email@example.com" class="mr-4">tu-email@example.com</a>
-            <a href="https://www.linkedin.com/in/alejandro-ameneyro" class="mr-4">LinkedIn</a>
-            <a href="https://github.com/tu-usuario" class="mr-4">GitHub</a>
-        </div>
-        <div>
-            <a href="ruta-a-tu-cv.pdf" class="btn btn-primary">Descargar CV</a>
-        </div>
+<footer class="flex flex-col gap-3 p-3 max-w-[75vw] mx-auto border-t border-t-slate-400 text-slate-400
+               lg:max-w-[60vw]">
+    
+    <div class="container mx-auto flex flex-col ">    
+        <ul class="flex flex-row flex-wrap justify-evenly items-center gap-3 mt-2">
+            <FooterSocial href="https://www.linkedin.com/in/alejandro-ameneyro">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" /><path d="M8 11l0 5" /><path d="M8 8l0 .01" /><path d="M12 16l0 -5" /><path d="M16 16v-3a2 2 0 0 0 -4 0" /></svg>
+            </FooterSocial>
+            <FooterSocial href="https://github.com/AlexxScript">
+                <svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
+            </FooterSocial>
+            <FooterSocial href="mailto:https://ameneyroalex@gmail.com">
+                <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-mail"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" /><path d="M3 7l9 6l9 -6" /></svg>
+            </FooterSocial>
+            <li>
+                <a href="../../public/AlejandroCV.pdf" download="Alejandro CV.pdf" class="flex text-base justify-center items-center gap-1 hover:border-[#FC6168] hover:text-[#FC6168] duration-200">
+                    <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-download"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" /><path d="M7 11l5 5l5 -5" /><path d="M12 4l0 12" /></svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">    
+        <p class="text-lg self-start">@{ currentYear } Alejandro Ameneyro.</p>
     </div>
 </footer>
+
+<style>
+    svg{
+        width: 25px;
+    }
+
+    @media (min-width: 600px) {
+        svg{
+            width: 30px;
+        }
+    }
+</style>
