--- a/src/components/TecnologiasProyecto.astro
+++ b/src/components/TecnologiasProyecto.astro
@@ -1,3 +1,3 @@
-<div class="bg-[#fc606878] w-[100px] text-sm p-3 flex justify-center items-center flex-col rounded-2xl border-[#fc6068] border-2">
+<div class="bg-[#fc606878] w-[80px] text-xs p-1 flex justify-center items-center flex-col rounded-2xl border-[#fc6068] border-2">
     <slot/>
 </div>
