--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[75vw] max-lg:my-[90px] mx-auto flex flex-col gap-10">
+		<main class="max-w-[75vw] lg:max-w-[60vw] mx-auto flex flex-col gap-10">
 			<slot />
 		</main>
 		<Footer/>
