--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -15,8 +15,8 @@ import Herramientas from "./Herramientas.astro";
         <div class="flex justify-center items-center gap-5 flex-wrap md:items-baseline">
             <Frontend />
             <Backend/>
-        </div>
-        <div class="flex justify-center gap-5 flex-wrap">
+        <!-- </div>
+        <div class="flex justify-center gap-5 flex-wrap"> -->
             <Aprendiendo/> 
             <Herramientas/>
         </div>
