--- a/src/components/IconsTech.astro
+++ b/src/components/IconsTech.astro
@@ -1,4 +1,3 @@
 <div class="flex text-[#7c7c7c] text-sm justify-center items-center gap-1 p-1 rounded-xl border border-[#6c6c6c]">
-    <slot name="icon"/>
-    <slot name="nameIcon"/>
+   <slot/> 
 </div>
