automatization of the projects section

--- a/src/components/RedireccionProyecto.astro
+++ b/src/components/RedireccionProyecto.astro
@@ -5,6 +5,7 @@ interface Props {
 
 const { href } = Astro.props
 ---
-<a href={href} target="_blank" class="text-[#fc6067] text-base flex gap-2 items-center font-semibold">
+<a href={href} target="_blank" class="text-[#da5d64] text-base flex gap-2 my-2 items-center font-semibold
+                            hover:gap-4 hover:text-[#fd6c73] transition-all duration-100">
     <slot/>
 </a>
