--- a/src/components/SectionResume.astro
+++ b/src/components/SectionResume.astro
@@ -1,13 +1,12 @@
 ---
 import ContainerLinks from "./ContainerLinks.astro"
 import ContentResume from "./ContentResume.astro"
-import ImgPerro from "./ImgPerro.astro"
 ---
 
 <section id="intro" class="my-10 flex flex-col-reverse justify-center items-center
                           lg:h-[600px] min-[1050px]:my-0 min-[1050px]:h-[70vh] xl:justify-evenly">
-    <div class="">
+    <article class="">
        <ContentResume/> 
        <ContainerLinks/>
-    </div>
+    </article>
 </section>
