--- a/src/components/SectionSobreMi.astro
+++ b/src/components/SectionSobreMi.astro
@@ -5,7 +5,7 @@
         </svg>
         Sobre mí
     </h2>
-    <div class="flex flex-col gap-4 text-gray-400">
+    <article class="flex flex-col gap-4 text-gray-400">
         <p>
             Hola, soy Alejandro Ameneyro egresado de la carrera Técnico en Informática y actualmente estudiante de la carrera
             Licenciatura en Ciencias de la Informática. Soy <strong class="font-semibold text-[#ED657C]">consciente de que la industria tecnológica crece exponencialmente
@@ -27,5 +27,5 @@
             profesional, me he dedicado a practicar y estudiar de manera autónoma. <strong class="font-semibold text-[#ED657C]">Estos proyectos me han permitido desarrollar 
             habilidades prácticas y enfrentar desafíos reales, preparándome para contribuir eficazmente en el desarrollo de aplicaciones web</strong>.
         </p>
-    </div>
+    </article>
 </section>
