--- a/src/components/SectionExperiencia.astro
+++ b/src/components/SectionExperiencia.astro
@@ -70,7 +70,7 @@ const experiencias = [
                         <h4 class="text-base font-semibold text-gray-400">{el.date}</h4>
                     </div>
                     <div class="lg:w-[70%] text-gray-400">
-                        <p>{el.description}</p>
+                        <p class="my-2">{el.description}</p>
                         {
                             el.redireccion.map((tec)=>(
                                 <RedireccionProyecto href={tec.href}>
