--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[60vw] my-9 mx-auto flex flex-col gap-10">
+		<main class="max-w-[60vw] mt-9 mb-2 mx-auto flex flex-col gap-10">
 			<slot />
 		</main>
 		<Footer/>
