--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ const links = [
 ---
 
 <footer class="flex flex-col gap-5 py-10 max-w-[75vw] mx-auto border-t border-t-slate-400 text-slate-400
-               lg:max-w-[60vw]">
+               lg:max-w-4xl">
     
     <div class="flex flex-col">    
         <ul class="max-w-[350px] w-full mx-auto flex flex-col flex-wrap justify-around items-center min-[425px]:flex-row gap-3 mt-2">
