--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,10 +5,10 @@ import LinkButtonHeader from "./LinkButtonHeader.astro";
 <header class="fixed top-0 w-[100%] z-20">
     <nav class="flex mt-9 justify-center items-center mx-auto">        
         <ul class="flex gap-3 z-30 fixed px-4 py-2">
-            <li><LinkButtonHeader href="#intro">Intro</LinkButtonHeader></li>
-            <li><LinkButtonHeader href="#experiencia">Experiencia</LinkButtonHeader></li>
-            <li><LinkButtonHeader href="#proyectos">Proyectos</LinkButtonHeader></li>
-            <li><LinkButtonHeader href="#sobremi">Sobre mí</LinkButtonHeader></li>
+            <li><LinkButtonHeader href="#intro" ariaLabel="intro">Intro</LinkButtonHeader></li>
+            <li><LinkButtonHeader href="#experiencia" ariaLabel="experiencia">Experiencia</LinkButtonHeader></li>
+            <li><LinkButtonHeader href="#proyectos" ariaLabel="proyectos">Proyectos</LinkButtonHeader></li>
+            <li><LinkButtonHeader href="#sobremi" ariaLabel="sobremi">Sobre mí</LinkButtonHeader></li>
         </ul>
     </nav>
 </header>
