--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,8 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[60vw] mt-9 mb-2 mx-auto flex flex-col gap-10">
+		<main class="max-w-[60vw] lg:max-w-4xl mt-9 mb-2 mx-auto flex flex-col gap-10">
+		<!-- <main class="max-w-[60vw] mt-9 mb-2 mx-auto flex flex-col gap-10"> -->
 			<slot />
 		</main>
 		<Footer/>
