--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,7 +35,7 @@ const links = [
                lg:max-w-4xl">
     
     <div class="flex flex-col">    
-        <ul class="max-w-[350px] w-full mx-auto flex flex-col flex-wrap justify-around items-center min-[425px]:flex-row gap-3 mt-2">
+        <ul class="max-w-[350px] w-full mx-auto flex flex-row flex-wrap justify-around items-center min-[425px]:flex-row gap-3 mt-2">
             {
                 links.map((el) => (
                     <FooterSocial download={el.download} href={el.href}>
